Fix reversed condition